--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
-- name: Home
-  link: /
 - name: About
-  link: /about.html
+  link: /
 - name: Resume
   link: /resume.html
 - name: Projects
   link: /projects.html
+- name: Contact
+  link: /contact.html
