Update footer links

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 - name: About
-  link: /
+  link: sarahmayharel/
 - name: Resume
-  link: /resume.html
+  link: sarahmayharel/resume.html
 - name: Projects
-  link: /projects.html
+  link: sarahmayharel/projects.html
 - name: Contact
-  link: /contact.html
+  link: sarahmayharel/contact.html
