Update gitignore, update nav, add smooth scroll

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 - name: About
   link: /#about
 - name: Resume
-  link: /resume.html
+  link: /#resume
 - name: Projects
   link: /projects.html
 - name: Contact
